@@ -1,3 +1,7 @@
+2011-12-01 Sarka Todorova <sarka.todorova@cern.ch>
+	* merged with branch MuonTrackingGeometry-00-05-40-02
+	* tagged as MuonTrackingGeometry-00-05-43 
+
 2011-11-08 Sarka Todorova <sarka.todorova@cern.ch>
 	* suppress (unused) MsgStream instantiations
 	* tagged as MuonTrackingGeometry-00-05-42 
